Fix menu position on small screens

--- a/src/playlist.styl
+++ b/src/playlist.styl
@@ -10,8 +10,10 @@
 
   >.ui.dropdown
     position: fixed
-    bottom: 10px
-    right: 10px
+    right: 0.7em
+    bottom: 0.7em
+    &.above-player-bar
+      bottom: 4em
     .menu.right
       left: auto
       right: 0
